Заканчивает шапку 4 кейса

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,7 @@
 
 @import "variables";
 @import "mixins";
-@import "global/fonts";
+// @import "global/fonts";
 @import "global/reboot";
 @import "global/utils";
 @import "global/container";
@@ -18,11 +18,16 @@
 // Blocks
 // ---------------------------------
 
-@import "blocks/btn";
-@import "blocks/modal";
-@import "blocks/custom-input";
-@import "blocks/custom-toggle";
-@import "blocks/custom-select";
+// @import "blocks/btn";
+// @import "blocks/modal";
+// @import "blocks/custom-input";
+// @import "blocks/custom-toggle";
+// @import "blocks/custom-select";
+
+@import "blocks/main-header.scss";
+@import "blocks/city-list.scss";
+@import "blocks/site-navigation.scss";
+@import "blocks/button.scss";
 
 // ---------------------------------
 
