--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,8 +3,9 @@
 
 // Default
 
-$color-default-black:               #000000;
+$color-default-black:               #636363;
 $color-default-white:               #ffffff;
+$color-default-blue:                #2f80ed;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
@@ -28,6 +29,8 @@ $fz-default:                        16px;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+
+$ff-montserrat:                     "Montserrat", sans-serif;
 
 // Animation
 // ---------------------------------
