--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,4 +1,15 @@
 .container {
+  width: 1180px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.container-wide {
+  width: 1420px;
+}
+
+.container-fluid {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
