--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -6,32 +6,44 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
+  // margin: 0;
+  // padding: 0;
+  // min-height: 100vh;
 }
 
 html {
-  font-style: normal;
-  font-weight: 400;
-  font-size: $fz-default;
-  line-height: 24px;
-  font-family: $ff-placeholder;
-  color: $color-default-black;
+  // font-style: normal;
+  // font-weight: 400;
+  // font-size: $fz-default;
+  // line-height: 24px;
+  // font-family: $ff-placeholder;
+  // color: $color-default-black;
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
   // оптимизация выравнивания шрифта относительно центра строки
-  text-rendering: optimizeLegibility;
+  // text-rendering: optimizeLegibility;
   // если по прежнему есть проблемы с выравниванием
   // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
 
-  background-color: $color-default-white;
+  // background-color: $color-default-white;
+  margin: 0;
+  padding: 0;
+  min-width: 1200px;
+  font-family: $ff-montserrat;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 23px;
+  color: $color-default-black;
+  background-image: url("../../img/bg.png"), url("../../img/bg-2.png"), url("../../img/bg-3.png");
+  background-repeat: no-repeat;
+  background-position: top right;
 }
 
 a {
