Размечает раздел с программой курса

--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -1,5 +1,7 @@
 .city-list,
-.site-navigation {
+.site-navigation,
+.audience-list,
+.program-list {
   list-style: none;
   padding: 0;
   margin: 0;
