--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,10 +24,16 @@
 // @import "blocks/custom-toggle";
 // @import "blocks/custom-select";
 
+@import "blocks/section-title.scss";
 @import "blocks/main-header.scss";
 @import "blocks/city-list.scss";
 @import "blocks/site-navigation.scss";
 @import "blocks/button.scss";
+@import "blocks/page.scss";
+@import "blocks/promo.scss";
+@import "blocks/rating.scss";
+@import "blocks/audience.scss";
+@import "blocks/program.scss";
 
 // ---------------------------------
 
