--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,8 +5,17 @@
   border-radius: 50px;
   padding: 10px;
 
-  &--register {
+  &--register-course {
     color: $color-default-blue;
     background-color: $color-default-white;
+  }
+
+  &--register {
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color-default-white;
+    background-color: $color-default-green;
+    box-shadow: 0 0 0 10px rgba(100, 226, 205, 0.5);
   }
 }
