--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@
 $color-default-black:               #636363;
 $color-default-white:               #ffffff;
 $color-default-blue:                #2f80ed;
+$color-default-green:               #64e2cd;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
