--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,3 +1,38 @@
 .program {
   padding-bottom: 150px;
+
+  &-list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 45px 45px;
+    width: 600px;
+  }
+
+  &-item {
+    width: 250px;
+  }
+
+  &-item-topic {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: $color-default-blue;
+  }
+
+  &-item-description {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  &-link {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: uppercase;
+    text-decoration: underline dashed;
+    color: $color-default-blue;
+  }
 }
