Заканчивает блок с результатом

--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -3,4 +3,11 @@
   font-size: 30px;
   line-height: 37px;
   color: #000000;
+
+  &-result {
+    margin: 0;
+    padding-top: 150px;
+    padding-bottom: 30px;
+    color: $color-default-white;
+  }
 }
