--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -1,7 +1,8 @@
 .city-list,
 .site-navigation,
 .audience-list,
-.program-list {
+.program-list,
+.result-list {
   list-style: none;
   padding: 0;
   margin: 0;
