--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,7 @@
 @import "blocks/rating.scss";
 @import "blocks/audience.scss";
 @import "blocks/program.scss";
+@import "blocks/result.scss";
 
 // ---------------------------------
 
