--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -2,7 +2,8 @@
 .site-navigation,
 .audience-list,
 .program-list,
-.result-list {
+.result-list,
+.speaker-skills-list {
   list-style: none;
   padding: 0;
   margin: 0;
