--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,6 +35,7 @@
 @import "blocks/audience.scss";
 @import "blocks/program.scss";
 @import "blocks/result.scss";
+@import "blocks/speaker.scss";
 
 // ---------------------------------
 
