--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -3,7 +3,8 @@
 .audience-list,
 .program-list,
 .result-list,
-.speaker-skills-list {
+.speaker-skills-list,
+.gallery-list {
   list-style: none;
   padding: 0;
   margin: 0;
