--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,7 @@
 @import "blocks/program.scss";
 @import "blocks/result.scss";
 @import "blocks/speaker.scss";
+@import "blocks/gallery.scss";
 
 // ---------------------------------
 
