--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -4,7 +4,8 @@
 .program-list,
 .result-list,
 .speaker-skills-list,
-.gallery-list {
+.gallery-list,
+.tariff-list {
   list-style: none;
   padding: 0;
   margin: 0;
