--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,7 @@
 @import "blocks/result.scss";
 @import "blocks/speaker.scss";
 @import "blocks/gallery.scss";
+@import "blocks/tariff.scss";
 
 // ---------------------------------
 
