--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -5,7 +5,8 @@
 .result-list,
 .speaker-skills-list,
 .gallery-list,
-.tariff-list {
+.tariff-list,
+.main-footer-links {
   list-style: none;
   padding: 0;
   margin: 0;
