--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,7 @@
 @import "blocks/speaker.scss";
 @import "blocks/gallery.scss";
 @import "blocks/tariff.scss";
+@import "blocks/main-footer.scss";
 
 // ---------------------------------
 
