--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,8 +4,9 @@
 // Default
 
 $color-default-black:               #636363;
-$color-default-white:               #ffffff;
+$color-default-white:               hsl(0, 0%, 100%);
 $color-default-blue:                #2f80ed;
+$color-default-blue-second:         #185fbf;
 $color-default-green:               #64e2cd;
 $color-default-green-second:        #52d1bc;
 $color-transparent:                 rgba(255, 255, 255, 0);
